@@ -982,14 +982,15 @@ Some interesting options of the post-processor :
 		</para></listitem>
 	</varlistentry>
 	<varlistentry>
-		<term><option>--output-format</option> vsSpPnlLiIh</term>
-		<term><option>-t</option> vsSpPnlLiIh</term>
+		<term><option>--output-format</option> vsSpPqQnlLiIh</term>
+		<term><option>-t</option> vsSpPqQnlLiIh</term>
 		<listitem><para>
 		Specify the output format where a single format char is a field intended for: 'v' vma, 's'
 		nr samples, 'S' nr cumulated samples, 'p' percent samples, 'P' cumulated percent samples,
 		'n' symbol name, 'l' source file name and line nr, 'L' ditto as 'l' but with basename of source
 		file name, 'i' image name, 'I' ditto as 'i' but with base name of image name, 'd' details for each samples for
-		the selected symbols and 'h' for the header itself.
+		the selected symbols and 'h' for the header itself. 'q','Q' are identical to 'p', 'P' but the
+		percentage are relative to the total number of symbols.
 		This option is not available with --dump-gprof-file.
 		</para></listitem>
 	</varlistentry>
