@@ -151,7 +151,8 @@ void get_options(int argc, char const * argv[])
 		outsymbflag fl =
 			output_symbol::ParseOutputOption(output_format);
 
-		if (fl == osf_none || (fl & ~(osf_header|osf_details)) == 0) {
+		if (fl == osf_none || (fl & ~(osf_header|osf_details)) == 0 ||
+		    (fl & (osf_percent_details | osf_percent_cumulated_details))) {
 			cerr << "op_time: invalid --output-format flags.\n";
 			output_symbol::ShowHelp();
 			exit(EXIT_FAILURE);
